...
        child: Align(
          alignment: Alignment.bottomCenter,
          child: Column(
            mainAxisSize: MainAxisSize.min,
            children: [
              AuthSelectButton(
                  key: const Key('sign_in_first_button'),
                  text: 'Войти',
                  isLogin: true,
                  onPressed: () => context.pushNamed(RouterPath.SIGNIN)),
              const SizedBox(
                height: 16,
              ),
...
