...
                          child: NavBar(
                              onItemChanged: (int newPosition) {
                                _onNavItemTapped(newPosition, context);
                              },
                              navBarItems: [
                                NavBarData(
                                    text: 'Главная',
                                    iconPath: 'assets/navbar/home.png'),
                                NavBarData(
                                    text: 'Прогресс',
                                    iconPath: 'assets/navbar/progress.png'),
                                NavBarData(
                                    text: 'Поиск',
...
